After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680952 - empathy-auth-client crashed with SIGSEGV in auth_data_free()
empathy-auth-client crashed with SIGSEGV in auth_data_free()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Auth client
3.5.x
Other Linux
: Normal critical
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-01 07:33 UTC by Bilal Shahid
Modified: 2012-08-03 07:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
stacktrace (3.11 KB, text/plain)
2012-08-01 07:34 UTC, Bilal Shahid
  Details
goa-auth-handler: factor out auth_data_new() (1.55 KB, patch)
2012-08-03 07:39 UTC, Guillaume Desmottes
committed Details | Review
goa-auth-handler: pass the data pointer to auth_cb (1.22 KB, patch)
2012-08-03 07:39 UTC, Guillaume Desmottes
committed Details | Review

Description Bilal Shahid 2012-08-01 07:33:36 UTC
Originally reported at:
  https://bugs.launchpad.net/bugs/1029258

Adding online accounts for Microsoft Exchange, Facebook and Google, error happened after Google addition

ProblemType: Crash
DistroRelease: Ubuntu 12.10
Package: empathy 3.5.4.1-0ubuntu1
ProcVersionSignature: Ubuntu 3.5.0-6.6-generic 3.5.0
Uname: Linux 3.5.0-6-generic x86_64
NonfreeKernelModules: nvidia
ApportVersion: 2.4-0ubuntu5
Architecture: amd64
Date: Thu Jul 26 01:12:11 2012
ExecutablePath: /usr/lib/empathy/empathy-auth-client
InstallationMedia: Ubuntu 12.04 LTS "Precise Pangolin" - Release amd64 (20120425)
Comment 1 Bilal Shahid 2012-08-01 07:34:11 UTC
Created attachment 220038 [details]
stacktrace
Comment 2 Guillaume Desmottes 2012-08-03 07:39:52 UTC
Created attachment 220206 [details] [review]
goa-auth-handler: factor out auth_data_new()

We already have the _free() function and it makes easier to track the
lifecycle of the struct.
Comment 3 Guillaume Desmottes 2012-08-03 07:39:56 UTC
Created attachment 220207 [details] [review]
goa-auth-handler: pass the data pointer to auth_cb

We are supposed to use it in this callback, if only to free it, so we should
really pass it as user_data.
Comment 4 Guillaume Desmottes 2012-08-03 07:52:45 UTC
Attachment 220206 [details] pushed as 7c54415 - goa-auth-handler: factor out auth_data_new()
Attachment 220207 [details] pushed as 7f5ca9d - goa-auth-handler: pass the data pointer to auth_cb