goa-auth-handler: factor out auth_data_new()

We already have the _free() function and it makes easier to track the
lifecycle of the struct.

https://bugzilla.gnome.org/show_bug.cgi?id=680952